@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <!--head-->
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <title>Horiseon</title>
 </head>
+
 <!--body-->
 <body>
     <!--navigation-->
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>
+            Hori<span class="seo">seo</span>n
+        </h1>
         <nav>
             <!--unordered list element-->
             <ul>
@@ -25,7 +29,7 @@
                 </li>
                 <li>
                     <!--anchor element-->
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href="#media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
         </nav>
@@ -35,54 +39,64 @@
     <section class="hero"></section>
 
     <!--main content; services-->
-    <section class="content">
+    <section class="services">
+
+        <!--services articles-->
         <article id="search-engine-optimization" class="service">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A notebook, pens, and laptop on a desk. The notebook has a diagram showing the factors of Search Engine Optimization: content, headings, backlink, link building, mobile compatibility, and social media." />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
+
         <article id="online-reputation-management" class="service">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A laptop with a graph showing your improved reputation." />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing" class="service">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+
+        <article id="media-marketing" class="service">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A desk with a team working together to improve your social media management through tweets and media, getting as many likes and shares as possible." />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
+
     </section>
 
     <!--secondary content; benefits-->
     <section class="benefits">
-        <article class="benefit">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+        
+        <!--individual benefits-->
+        <div class="benefit">
+            <h2>Lead Generation</h2>
+            <img src="./assets/images/lead-generation.png" alt="" />
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </article>
-        <article class="benefit">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.                </p>
+        </div>
+
+        <div class="benefit">
+            <h2>Brand Awareness</h2>
+            <img src="./assets/images/brand-awareness.png" alt="" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </article>
-        <article class="benefit">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+        </div>
+
+        <div class="benefit">
+            <h2>Cost Management</h2>
+            <img src="./assets/images/cost-management.png" alt="" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </article>
+        </div>
+
     </section>
+
 
     <!--footer-->
     <footer>
