@@ -5,7 +5,6 @@
 - switched divs to navs for the navigation bar
 - search-engine-optimization added 'id'
 - removed .headers in style.css, replaced with header (class --> HTML5 tag)
-- changed 'div' tags which define sections to 'section' tags
 - re-ordered style.css to prevent overwrites
 - cleaned up duplicate styles
 - changed footer from 'div' to 'footer'
@@ -13,3 +12,8 @@
 - created git repository for new website
 - rearranged directories for github
 - added alt-text to images
+- removed /img tag, as img element is self closing
+- added type to stylesheet link
+- removed 'social' from Social Media Marketing id, as the word: "social" is flagged as unimportant by reader view
+- reorganized classes to have proper names
+- changed divs to sections where appropriate
